--- a/Tutor.MobileUI/AppShell.xaml
+++ b/Tutor.MobileUI/AppShell.xaml
@@ -5,8 +5,10 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:Tutor.MobileUI"
     xmlns:pages="clr-namespace:Tutor.MobileUI.Pages"
+    xmlns:controls="clr-namespace:Tutor.MobileUI.Controls"
     Shell.FlyoutBehavior="Flyout"
-    Shell.TabBarIsVisible="False">
+    Shell.TabBarIsVisible="False"
+    FlyoutHeaderBehavior="Fixed">
   <ShellContent Route="Main">
     <ShellContent.ContentTemplate>
       <DataTemplate>
@@ -23,4 +25,9 @@
                   Title="My advertisements"
                   Route="MyAdvertisements"/>
   </FlyoutItem>
+  <Shell.FlyoutHeader>
+    <Grid ColumnDefinitions="2*,*">
+      <controls:ProfileImage/>
+    </Grid>
+  </Shell.FlyoutHeader>
 </Shell>
